updated themes and added count to bar plot

--- a/Case Study 1 Group 4.Rmd
+++ b/Case Study 1 Group 4.Rmd
@@ -112,9 +112,12 @@ Brewery_Stat = beers_breweries %>%
 
 # Basic Bar plot
 ggplot(Brewery_Stat, aes(x = reorder(State, -count), y = count)) +
-    geom_bar(stat = "identity", fill = "red") +
-    labs(x = "State", y = "Number of Breweries", title = "Number of Breweries in Each State") +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1))
+  geom_bar(stat = "identity", fill = "red") +
+  labs(x = "State", y = "Number of Breweries", title = "Number of Breweries in Each State") +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  geom_text(aes(label = count), vjust = 0, size = 2) +
+  theme_gdocs()
+  
 
 ```
 
@@ -227,8 +230,9 @@ beers_breweries %>% select(Style,IBU) %>%
 
 # Removing the remaining missing values 
 beers_breweries <- beers_breweries %>% drop_na(ABV, IBU)
+sapply(beers_breweries, function(x) sum(is.na(x)))
 ```
-There are still 52 missing IBU values after imputing the mean IBU value for the style of beer. These beers are styles that do not commonly have IBU measured, and so there is no mean to impute. As shown in the table of remaining missing values per style, these beers are largely styles that are irrelevant to our analysis. We will leave the values as missing and they will be excluded in any further analysis.
+There are still 52 missing IBU values after imputing the mean IBU value for the style of beer. These beers are styles that do not commonly have IBU measured, and so there is no mean to impute. As shown in the table of remaining missing values per style, these beers are largely styles that are irrelevant to our analysis. We will remove those last few missing IBUs as they will be excluded in any further analysis.
 
 Lastly, three beers do not have a style. Because this is such a small number of beers, we will change them to "Other" to make the analysis easier.
 ```{r}
@@ -407,7 +411,7 @@ lsd_abv$means[1:2, ] %>%
     y = "Estimate",
     color = "Style"
   ) +
-  theme_clean()
+  theme_gdocs()
 ```
 
 We can see that the mean ABV of IPA's is significantly higher than the mean ABV of Ales. The error bars indicate that we can be 95% confident that their ranges are not even close to overlapping. In fact, the p-value that the difference in their mean ABV values is 0 is 2.2e-16, which is extremely small. This is one reason the KNN model is so effective.
@@ -431,7 +435,7 @@ lsd_ibu$means[1:2, ] %>%
     y = "Estimate",
     color = "Style"
   ) +
-  theme_clean()
+  theme_gdocs()
 ```
 
 Again, we can see that their likely ranges of mean values are not even close to overlapping. The p-value that their difference in mean IBU value is 0 is small enough to be effectively zero. This is further reason to expect the KNN model to be effective.
@@ -508,7 +512,7 @@ lsd_abv$means %>%
     y = "Estimate",
     color = "Style"
   ) +
-  theme_clean()
+  theme_gdocs()
 ```
 
 We can see that, while some categories have overlapping confidence intervals, most are different. The only categories that do not have a significant difference in their mean ABV values (p > 0.05 including Bonferroni adjustment for post-hoc comparisons) are Ale and Other, IPA and Stout, Lager and Pilsner, and Other and Porter.
@@ -544,7 +548,7 @@ lsd_ibu$means %>%
     y = "Estimate",
     color = "Style"
   ) +
-  theme_clean()
+  theme_gdocs()
 ```
 
 Here, there is some overlap, but also significant differences. The only pairings that do not have statistically significant differences of means are: Ales, Porters, and Pilsners, as well as the difference between Lager and Other. 
