--- a/Case Study 1 Group 4.Rmd
+++ b/Case Study 1 Group 4.Rmd
@@ -342,7 +342,7 @@ beers_breweries %>%
     y = "Bitterness (IBU)",
     title = "Alcohol Content vs. Bitterness") +
   scale_x_continuous(labels = scales::percent) +
-  theme_economist()
+  theme_gdocs()
 
 ```
  
